# biblia-offline

./: main.py  pyproject.toml
.github/workflows/: build.yml
mi biblia/: main.py
