[project]
name = "biblia_offline"
version = "0.1.0"
dependencies = ["flet"]

[tool.flet]
path = "main.py"
assets_dir = "assets"

[tool.flet.android]
# Esto mete la Biblia y el Icono automáticamente
include_assets = ["assets/*"]
# Aquí le decimos la arquitectura para que pese poco (50MB)
target_architecture = "arm64" 
